--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,122 @@
-.App {
-  text-align: center;
+:root{
+    /* colors */
+    --clr-primary-1: #453227;--clr-primary-2: #5f4435;--clr-primary-3: #795744;
+    --clr-primary-4: #936a53;--clr-primary-5: #ab7a5f;--clr-primary-6: #b99179;
+    --clr-primary-7: #c5a491;--clr-primary-8: #d1b6a8;--clr-primary-9: #decbc0;
+    --clr-primary-10: #eaded7;
+
+    --clr-grey-1: #102a42;--clr-grey-2: #243a52;--clr-grey-3: #324d67;
+    --clr-grey-4: #48647f;--clr-grey-5: #617d98;--clr-grey-6: #829ab0;
+    --clr-grey-7: #9eb2c7;--clr-grey-8: #bcccdc;--clr-grey-9: #dae2ec;
+
+    --clr-grey-10: #f1f5f8;--clr-white: #fff;
+
+    --clr-red-dark: #bb2525;
+    --clr-red-light: #e66b6b;
+    --clr-green-dark: #25bb32;
+    --clr-green-light: #6be675;
+    --clr-black: #222;
+    --transition: all 0.3s linear;
+    --spacing: 0.1rem;
+    --radius: 0.25rem;
+    --light-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    --dark-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    /* titles */
+    --h1-fs: 2.5rem;
+    --h2-fs: 2rem;
+    --h3-fs: 1.5rem;
+    --h4-fs: 1.25rem;
+    /* desc */
+    --p-fs: 1rem;
+}
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family: 'Roboto', sans-serif;;
+    overflow-x: hidden;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+    font-size: var(--h1-fs);
+    line-height: 1.25;
+}
+h2{
+    font-size: var(--h2-fs);
+    line-height: 1.25;
+}
+h3{
+    font-size: var(--h3-fs);
+}
+h4{
+    font-size: 1.25rem;
+}
+h5{
+    font-size: 0.875rem;
+}
+p{
+    color: #617d98;
+    font-size: 0.875rem;
+}
+.desc{
+    font-size: var(--p-fs);
+    line-height: 2;
+    font-weight: 300;
+}
+a{
+    text-decoration: none;
+    color: var(--clr-grey-3);
+    font-size: 1rem;
+    text-transform: uppercase;
+}
+.btn{
+    padding: 0.8rem 1rem;
+    font-size: 12px;
+    border: none;
+    border-radius: 5px;
+    background: var(--clr-primary-5);
+    color: var(--clr-primary-10);
+}
+.btn a{
+    color: var(--clr-primary-10);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.width-container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.btn{
+    cursor: pointer;
+}
+.App{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and (min-width:900px) {
+    h1{
+        font-size: 3rem;
+        line-height: 1.25;
+    }
+    h2{
+        font-size: 2.5rem;
+    }
+    h3{
+        font-size: 2rem;
+    }
+    h4{
+        font-size: 1.5rem;
+    }
+    h5{
+        font-size: 1rem;
+    }
+    .desc{
+        font-size: 1.25rem;
+    }
+    a{
+        font-size: 1.2rem;
+    }
 }
